--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -1,7 +1,7 @@
 
 body {
-  font-family: sans-serif;
-  background: #f5f5f5;
+  font-family: comic-sans;
+  background: #ba7ae0;
   padding: 20px;
 }
 
