--- a/backend/public/style.css
+++ b/backend/public/style.css
@@ -8,7 +8,7 @@ body {
 .container {
   max-width: 500px;
   margin: auto;
-  background: white;
+  background: Green;
   padding: 20px;
   border-radius: 8px;
 }
@@ -21,6 +21,6 @@ ul {
 li {
   padding: 10px;
   margin-top: 10px;
-  background: #eee;
+  background: #33ab5d;
   border-radius: 4px;
 }
